# lium

./: .gitignore  README.md  llms.txt  multi_test.txt  pyproject.toml
examples/: provision_example.py  sdk_example.py
examples/assets/: sample_dataset.csv
lium/: __init__.py  api.py  cli.py  config.py  display.py  docker.py  helpers.py  provision.py  sdk.py  styles.py
lium/commands/: __init__.py  config.py  down.py  exec.py  fund.py  image.py  init.py  ls.py  ps.py  rm.py  rsync.py  scp.py  ssh.py  theme.py  up.py
scripts/: iota.sh  jupyter.sh
